<resources>
    <string name="app_name">Android Academy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_person">Create a new contact</string>
    <string name="image_url">Image url</string>
    <string name="hint_url">https://www.sofascore.com/static/images/apple-icon-180x180.png</string>
    <string name="first_name">First name</string>
    <string name="pero">Pero</string>
    <string name="last_name">Last name</string>
    <string name="peric">Peric</string>
    <string name="age">Age</string>
    <string name="number_twenty" translatable="false">20</string>
    <string name="oib">OIB</string>
    <string name="oib_hint">1234567891234</string>
    <string name="title_list">PersonList</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_settings">Settings</string>
    <string name="title_add">Add new contact</string>
    <string name="contacts">Contacts</string>
    <string name="add">Add</string>
    <string name="years">%1$d years</string>
    <string name="gender_male">Male</string>
    <string name="gender_male_short">M</string>
    <string name="gender_female_short">F</string>
    <string name="gender_other_short">O</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="error_image_url">Url can not be longer than 50 characters</string>
    <string name="error_first_name">First name can not be longer than 20 characters</string>
    <string name="error_last_name">Last name can not be longer than 20 characters</string>
    <string name="error_age">Age can not larger than 150</string>
    <string name="error_oib">OIB has to have 13 digits</string>
    <string name="language_en">English</string>
    <string name="language_hr">Croatian</string>
    <string name="choose_app_language">Choose application language</string>
    <string name="title_activity_contact">Contact Activity</string>
</resources>